func_str.result, null.result:   Corrected results after the fix for bug #12791. func_test.result, func_test.test:   Added test cases for bug #12791. item_func.h, item_func.cc:   Fixed bug #12791.   Made LEAST/GREATES fully Oracle compliant.   LEAST/GREATEST did not return NULL if only some   arguments were NULLs. This did not comply with Oracle.